# cyipopt

./: meson.build  pyproject.toml  setup.py
src/cyipopt/: __init__.py
