[project]
name = "cyipopt"
authors = [{ name = "Jason K. Moore", email = "moorepants@gmail.com" }]
description = "A Cython wrapper to the IPOPT optimization package"
readme = "README.rst"
license = "EPL-2.0"
license-files = ["LICENSE"]
keywords = [
	"coin-or",
	"interior-point",
	"ipopt",
	"nlp",
	"nonlinear programming",
	"optimization",
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
version = "1.4.1"
requires-python = ">=3.9, <3.13"
dependencies = ["numpy>=1.21.5"]

[project.urls]
Homepage = "https://github.com/mechmotum/cyipopt"

[build-system]
requires = ["meson-python", "cython>=0.29.28", "numpy>=1.25"]
build-backend = "mesonpy"

[tool.cibuildwheel.linux]
before-all = [
	"dnf install -y MUMPS-devel metis-devel lapack-devel",
	# Build ASL.
	"git clone https://github.com/coin-or-tools/ThirdParty-ASL.git",
	"cd ThirdParty-ASL",
	"./get.ASL",
	"./configure",
	"make",
	"make install",
	"cd ..",
	# Build IPOPT.
	# TODO: get MUMPS found by configure
	# Look at
	# https://src.fedoraproject.org/rpms/coin-or-Ipopt/blob/f42/f/coin-or-Ipopt.spec
	# https://github.com/conda-forge/ipopt-feedstock/blob/main/recipe/meta.yaml
	"git clone https://github.com/coin-or/Ipopt.git --depth 1 --branch releases/3.14.17",
	"cd Ipopt",
	"mkdir build",
	"cd build",
	"../configure",
	"make",
	"make install",
]
